# immutable

./: CMakeLists.txt
doc/: CMakeLists.txt  conf.py.in
immutable/: CMakeLists.txt
immutable-optional/: CMakeLists.txt
immutable-optional/include/immutable-optional/: immutable-optional.h
immutable-optional/src/: library_main.cpp
immutable-optional_test/: CMakeLists.txt
immutable-optional_test/src/: test1.cpp
immutable-vector/: CMakeLists.txt
immutable-vector/include/immutable-vector/: immutable-vector.h
immutable-vector_test/: CMakeLists.txt
immutable-vector_test/src/: test1.cpp
immutable/src/: main.cpp
wrapper/: CMakeLists.txt
wrapper/doc/: conf.py.in
wrapper/include/wrapper/: value_semantics.h  wrapper.h
wrapper/src/: library_main.cpp
wrapper_test/: CMakeLists.txt
wrapper_test/src/: test_wrapper.cpp
